# lamoda-parser

./: .env.sample  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
src/: api.py  config.py  models.py  parse.py  server.py  use_cases.py  utils.py
src/app/: app.py  config.py  dependencies.py  handlers.py  meta.py  middleware.py  view_models.py
src/cdn/: use_cases.py
src/clothing/: db.py  models.py  use_cases.py
src/core/: cdn.py  http.py  image.py  str_.py
tests/: conftest.py  test_color.py  test_parse.py
tests/app/: test_handlers.py
tests/clothing/: test_parse.py  test_use_cases.py
tests/core/: test_cdn.py  test_color.py  test_http.py  test_image.py
tests/data/: lamoda.html
