[tool.poetry]
name = "lamoda-parser"
version = "0.1.0"
description = ""
authors = ["potykion <potykion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests_html = "^0.10.0"
fastapi = "^0.61.1"
uvicorn = "^0.12.1"
scipy = "^1.5.2"
Pillow = "^7.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
