[tool.poetry]
name = "lamoda-parser"
version = "0.1.0"
description = ""
authors = ["potykion <potykion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests_html = "^0.10.0"
fastapi = "^0.61.1"
uvicorn = "^0.12.1"
scipy = "^1.5.2"
Pillow = "^7.2.0"
aioboto3 = "^8.0.5"
python-dotenv = "^0.15.0"
httpx = "^0.16.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
